// dto.proto
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.microservices.grpc.order_product.dto";

package order_product;

import "entities.proto";

// DTOs (Request/Response objects)
message CreateOrderRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetProductByIdRequest {
  int32 product_id = 1;
}

message GetProductByIdResponse {
  Product product = 1;
}

message UpdateProductRequest {
  Product product = 1;
}

message UpdateProductResponse {
  bool success = 1;
  string message = 2;
}