syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.orders_service.entities";

package com.orders_service.entities;

enum product_state {
  AVAILABLE = 0;
  OUT_OF_STOCK = 1;
}

enum order_state {
  CREATED = 0;
  PROCESSING = 1;
  FAILED = 2;
}

message product {
  int32 id = 1;
  int32 qte = 2;
  product_state state = 3;
}

message order {
  int32 id = 1;
  int32 product_id = 2;
  int32 product_qte = 3;
  order_state state = 4;
}

// Request to get product by ID
message GetProductByIdRequest {
  int32 product_id = 1;
}

// Response after updating order status
message UpdateOrderStatusResponse {
  order updated_order = 1;
}

service orderService {
  // Create new order (step 1 in diagram)
  rpc createOrder(order) returns (order);

  // Update order status (step 9 in diagram)
  rpc updateOrderStatus(order) returns (UpdateOrderStatusResponse);
}

service productService {
  // Get product by ID (step 2 in diagram)
  rpc getProductById(GetProductByIdRequest) returns (product);

  // Update product (step 6 in diagram)
  rpc updateProduct(product) returns (product);
}